[package]
name = "yoitsus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11", features = ["client", "standard_framework", "voice", "cache"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue", "serenity"] }
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = "0.4.24"
timeago = "0.4.1"
regex = "1.8.3"
chat-gpt-lib-rs = "0.2.1"

