[package]
name = "yoitsus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["client", "standard_framework", "voice", "cache"]}
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue", "serenity"] }
rand = "0.8.5"
chrono = "0.4.24"
regex = "1.8.3"
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
sysinfo = "0.30.13"
reqwest = { version = "0.12.4", features = ["json"] }
tokio-tungstenite = "0.23.1"
serde_json = "1.0.120"
futures-util = "0.3.30"


